Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ provide easy access to everything you might want to know about a method.</p>
 </li>
 <li>Be sure one of your gem sources is <code>source 'https://rubygems.org'</code>
 </li>
-<li>Run <code>gem install rubycom</code>
+<li>Run <code>gem install method_reflect</code>
 </li>
 </ul>
 
